--- a/.github/workflows/build-apk-acode.yml
+++ b/.github/workflows/build-apk-acode.yml
@@ -318,7 +318,7 @@ jobs:
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
-          P12_KEYSTORE_PATH: "./acode_source/${{ env.KEYSTORE_PATH }}"
+          P12_KEYSTORE_PATH: "acode_source/${{ env.KEYSTORE_PATH }}"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
-          BUILD_ARTIFACT_PATH: "./acode_source/tmp/acode-${{ env.BUILD_DATE }}.apk"
+          BUILD_ARTIFACT_PATH: "acode_source/tmp/acode-${{ env.BUILD_DATE }}.apk"
           RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-acode"
