--- a/.github/actions/erase_aes256pac_release/action.yml
+++ b/.github/actions/erase_aes256pac_release/action.yml
@@ -26,13 +26,13 @@ runs:
   steps:
     - name: Remove keystore
       shell: bash
-      # working-directory: "${{ github.workspace }}"
+      working-directory: "${{ github.workspace }}"
       run: |
         set -e  # 命令出错时立即退出，避免继续执行
         # 删除私钥文件并校验结果
-        rm -f "${{ github.workspace }}/${{ inputs.P12_KEYSTORE_PATH }}"
-        if [ ! -f "${{ github.workspace }}/${{ inputs.P12_KEYSTORE_PATH }}" ]; then
-          echo "✅ 私钥文件 '${{ github.workspace }}/${{ inputs.P12_KEYSTORE_PATH }}' 已成功删除"
+        rm -f "${{ inputs.P12_KEYSTORE_PATH }}"
+        if [ ! -f "${{ inputs.P12_KEYSTORE_PATH }}" ]; then
+          echo "✅ 私钥文件 '${{ inputs.P12_KEYSTORE_PATH }}' 已成功删除"
         else
           echo "❌ 私钥文件删除失败"
           exit 1
@@ -47,7 +47,7 @@ runs:
 
     - name: Create aes256 archive with filename encryption
       shell: bash
-      # working-directory: "${{ github.workspace }}"
+      working-directory: "${{ github.workspace }}"
       run: |
         set -e
         pwd
@@ -63,18 +63,18 @@ runs:
           -ms=on \
           -mhc=on \
           -ma=2 \
-          "${{ github.workspace }}/${{ inputs.BUILD_ARTIFACT_PATH }}.7z" \
-          "${{ github.workspace }}/${{ inputs.BUILD_ARTIFACT_PATH }}"
+          "${{ inputs.BUILD_ARTIFACT_PATH }}.7z" \
+          "${{ inputs.BUILD_ARTIFACT_PATH }}"
         # 校验压缩包生成结果
-        if [ -f "${{ github.workspace }}/${{ inputs.BUILD_ARTIFACT_PATH }}.7z" ]; then
-          echo "✅ 加密压缩包已生成：${{ github.workspace }}/${{ inputs.BUILD_ARTIFACT_PATH }}.7z"
+        if [ -f "${{ inputs.BUILD_ARTIFACT_PATH }}.7z" ]; then
+          echo "✅ 加密压缩包已生成：${{ inputs.BUILD_ARTIFACT_PATH }}.7z"
         else
           echo "❌ 压缩包生成失败"
           exit 1
         fi
 
     - name: Create github release
-      uses: softprops/action-gh-release@master
+      uses: zxgv5/gh-ReleaseAction@master
       with:
         tag_name: ${{ inputs.RELEASE_TAG_NAME }}
         draft: false
