--- a/.github/workflows/build-apk-acode.yml
+++ b/.github/workflows/build-apk-acode.yml
@@ -131,7 +131,7 @@ jobs:
           # 备份原webpack配置
           cp webpack.config.js webpack.config.js.backup
           
-          # 创建修复的webpack配置，保持开发和生产模式一致的loader配置
+          # 创建修复的webpack配置
           cat > webpack.config.fixed.js << 'EOF'
           const path = require('path');
           const fs = require('fs');
@@ -167,7 +167,12 @@ jobs:
                   'sass-loader',
                 ],
               },
-              {
+            ];
+      
+            // 根据模式使用不同的JS加载器配置
+            if (mode === 'production') {
+              // 生产模式：先使用tag-loader处理JSX，然后使用babel-loader
+              rules.push({
                 test: /\.m?js$/,
                 exclude: /node_modules\/(?!(html-tag-js)\/).*/,
                 use: [
@@ -176,19 +181,45 @@ jobs:
                     loader: 'babel-loader',
                     options: {
                       presets: ['@babel/preset-env'],
-                      plugins: mode === 'production' ? [
+                      plugins: [
                         ['@babel/plugin-transform-runtime', {
                           corejs: 3,
                           helpers: true,
                           regenerator: true,
-                          useESModules: false
+                          useESModules: false,
+                          // 禁用自动导入，避免重复导入tag
+                          absoluteRuntime: false,
+                          version: "7.23.9"
                         }]
-                      ] : []
+                      ],
+                      // 配置babel-loader忽略html-tag-js的导入
+                      exclude: [
+                        /node_modules\/html-tag-js/,
+                        function(modulePath) {
+                          return modulePath.indexOf('html-tag-js') !== -1;
+                        }
+                      ]
                     },
                   },
                 ],
-              },
-            ];
+              });
+            } else {
+              // 开发模式：简化配置
+              rules.push({
+                test: /\.m?js$/,
+                exclude: /node_modules\/(?!(html-tag-js)\/).*/,
+                use: [
+                  'html-tag-js/jsx/tag-loader.js',
+                  {
+                    loader: 'babel-loader',
+                    options: {
+                      presets: ['@babel/preset-env'],
+                      plugins: []
+                    },
+                  },
+                ],
+              });
+            }
       
             const main = {
               mode,
@@ -213,15 +244,17 @@ jobs:
                   crypto: false,
                 },
                 modules: ["node_modules", "src"],
+                // 添加alias，确保html-tag-js只被导入一次
+                alias: {
+                  'html-tag-js': path.resolve(__dirname, 'node_modules/html-tag-js')
+                }
               },
               plugins: [
                 new MiniCssExtractPlugin({
                   filename: '[name].css',
                 }),
               ],
-              // 添加开发工具以帮助调试
               devtool: mode === 'production' ? false : 'source-map',
-              // 优化配置
               optimization: {
                 minimize: mode === 'production',
                 splitChunks: {
@@ -242,11 +275,10 @@ jobs:
                   },
                 },
               },
-              // 性能提示
               performance: {
                 hints: mode === 'production' ? 'warning' : false,
-                maxAssetSize: 1024 * 1024, // 1MB
-                maxEntrypointSize: 1024 * 1024, // 1MB
+                maxAssetSize: 1024 * 1024,
+                maxEntrypointSize: 1024 * 1024,
               },
             };
             return [main];
